--- a/index.html
+++ b/index.html
@@ -408,8 +408,10 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Abhishekpawar16/number-guessing-game">🎮 Number Guessing Game</a></h3>
-                <p>Built an interactive number guessing game in Python with AI-powered hints and multiple difficulty levels.</p>
+                <h3 class="heading"><a href="https://github.com/Abhishekpawar16/number-guessing-game">🧑‍💻 Personal Portfolio</a></h3>
+                <p>Designed and developed a personal portfolio website to showcase my projects, skills, and experience. The site includes responsive design, project highlights, contact details, and a clean user-friendly interface to reflect my personal brand and technical expertise.
+
+.</p>
               </div>
             </div>
           </div>
