--- a/index.html
+++ b/index.html
@@ -300,6 +300,89 @@
     </section>
 
 
+   <section id="technologies" style="background-color: #000; padding: 60px 20px; color: white; text-align: center;">
+		<div class="row justify-content-center pb-5">
+			<div class="col-md-10 heading-section text-center ftco-animate">
+				<h1 class="big big-2">Technologies</h1>
+			  <h2 class="mb-4">Technologies</h2>
+		<p style="color: #7f8fa6; font-size: 1.1em; margin-bottom: 40px;">
+		  The tools and technologies I use to bring ideas to life
+		</p>
+		<div style="
+		  display: flex;
+		  flex-wrap: wrap;
+		  justify-content: center;
+		  gap: 20px;
+		">
+		  <!-- Card 1 -->
+		  <div style="
+			background: #f4f4f4;
+			padding: 30px 20px;
+			border-radius: 15px;
+			width: 150px;
+			text-align: center;
+			box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+		  ">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Python</span>
+		  </div>
+	  
+		  <!-- Repeat this structure for each technology -->
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Crystal_Clear_app_edu_mathematics.png" alt="Machine Learning" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Machine Learning</span>
+		  </div>
+	  
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Django</span>
+		  </div>
+	  
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">SQL</span>
+		  </div>
+	  
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">HTML5</span>
+		  </div>
+	  
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">CSS3</span>
+		  </div>
+	  
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Power_bi_logo_black_and_white.png" alt="Power BI" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Power BI</span>
+		  </div>
+	  
+		  <div style="background:rgb(251, 251, 251); padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Git</span>
+		  </div>
+
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/selenium/selenium-original.svg" alt="Selenium" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Selenium</span>
+		  </div>
+
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Docker</span>
+		  </div>
+
+		  <div style="background: #f4f4f4; padding: 30px 20px; border-radius: 15px; width: 150px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+			<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jenkins/jenkins-original.svg" alt="Jenkins" style="height: 50px; margin-bottom: 15px;">
+			<span style="font-weight: bold; color: #444;">Jenkins</span>
+		  </div>
+		  
+		</div>
+	  </section>
+	
+	</body>
+	</html>
 
 	
     <section class="ftco-section ftco-no-pb" id="resume-section">
